SqlFirst.Providers.MsSqlServer/VariableDeclarations/Generated/SqlVariableDeclarationsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\users\keeper\documents\visual studio 2015\Projects\ClassLibrary1\ClassLibrary1\SqlVariableDeclarations.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SqlFirst.Providers.MsSqlServer.VariableDeclarations.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class SqlVariableDeclarationsParser : Parser {
	public const int
		DECLARE=1, MAX=2, INT=3, FLOAT=4, STRING=5, IDENTIFIER=6, VARIABLESIGN=7, 
		LINEBREAK=8, EQUATION=9, SPACE=10, TAB=11, OPEN_PRTH=12, CLOSE_PRTH=13, 
		SEMICOLON=14, SINGLELINE_COMMENTARY=15, MULTILINE_COMMENTATY=16;
	public const int
		RULE_root = 0, RULE_element = 1, RULE_declaration = 2, RULE_commentary = 3, 
		RULE_spaces = 4, RULE_space = 5, RULE_assignment = 6, RULE_value = 7, 
		RULE_stringValue = 8, RULE_intValue = 9, RULE_floatValue = 10, RULE_variable = 11, 
		RULE_type = 12, RULE_typeName = 13, RULE_size = 14, RULE_length = 15, 
		RULE_maxValue = 16, RULE_identifier = 17;
	public static readonly string[] ruleNames = {
		"root", "element", "declaration", "commentary", "spaces", "space", "assignment", 
		"value", "stringValue", "intValue", "floatValue", "variable", "type", 
		"typeName", "size", "length", "maxValue", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, "'@'", null, "'='", "' '", "'\t'", 
		"'('", "')'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DECLARE", "MAX", "INT", "FLOAT", "STRING", "IDENTIFIER", "VARIABLESIGN", 
		"LINEBREAK", "EQUATION", "SPACE", "TAB", "OPEN_PRTH", "CLOSE_PRTH", "SEMICOLON", 
		"SINGLELINE_COMMENTARY", "MULTILINE_COMMENTATY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SqlVariableDeclarations.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SqlVariableDeclarationsParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class RootContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(SqlVariableDeclarationsParser.Eof, 0); }
		public ElementContext[] element() {
			return GetRuleContexts<ElementContext>();
		}
		public ElementContext element(int i) {
			return GetRuleContext<ElementContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 36; element();
					}
					} 
				}
				State = 41;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			}
			State = 42; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public CommentaryContext commentary() {
			return GetRuleContext<CommentaryContext>(0);
		}
		public SpaceContext space() {
			return GetRuleContext<SpaceContext>(0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_element; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementContext element() {
		ElementContext _localctx = new ElementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_element);
		try {
			State = 47;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; declaration();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; commentary();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 46; space();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public ITerminalNode DECLARE() { return GetToken(SqlVariableDeclarationsParser.DECLARE, 0); }
		public SpacesContext[] spaces() {
			return GetRuleContexts<SpacesContext>();
		}
		public SpacesContext spaces(int i) {
			return GetRuleContext<SpacesContext>(i);
		}
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(SqlVariableDeclarationsParser.SEMICOLON, 0); }
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49; Match(DECLARE);
			State = 50; spaces();
			State = 51; variable();
			State = 52; spaces();
			State = 53; type();
			State = 54; spaces();
			State = 58;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 55; assignment();
				State = 56; spaces();
				}
				break;
			}
			State = 60; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentaryContext : ParserRuleContext {
		public ITerminalNode SINGLELINE_COMMENTARY() { return GetToken(SqlVariableDeclarationsParser.SINGLELINE_COMMENTARY, 0); }
		public ITerminalNode MULTILINE_COMMENTATY() { return GetToken(SqlVariableDeclarationsParser.MULTILINE_COMMENTATY, 0); }
		public CommentaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commentary; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentary(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentaryContext commentary() {
		CommentaryContext _localctx = new CommentaryContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_commentary);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			_la = _input.La(1);
			if ( !(_la==SINGLELINE_COMMENTARY || _la==MULTILINE_COMMENTATY) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpacesContext : ParserRuleContext {
		public SpaceContext[] space() {
			return GetRuleContexts<SpaceContext>();
		}
		public SpaceContext space(int i) {
			return GetRuleContext<SpaceContext>(i);
		}
		public SpacesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_spaces; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpaces(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpacesContext spaces() {
		SpacesContext _localctx = new SpacesContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_spaces);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 64; space();
					}
					} 
				}
				State = 69;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpaceContext : ParserRuleContext {
		public ITerminalNode SPACE() { return GetToken(SqlVariableDeclarationsParser.SPACE, 0); }
		public ITerminalNode TAB() { return GetToken(SqlVariableDeclarationsParser.TAB, 0); }
		public ITerminalNode LINEBREAK() { return GetToken(SqlVariableDeclarationsParser.LINEBREAK, 0); }
		public SpaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_space; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpaceContext space() {
		SpaceContext _localctx = new SpaceContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_space);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LINEBREAK) | (1L << SPACE) | (1L << TAB))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode EQUATION() { return GetToken(SqlVariableDeclarationsParser.EQUATION, 0); }
		public SpacesContext spaces() {
			return GetRuleContext<SpacesContext>(0);
		}
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(EQUATION);
			State = 73; spaces();
			State = 74; value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public StringValueContext stringValue() {
			return GetRuleContext<StringValueContext>(0);
		}
		public IntValueContext intValue() {
			return GetRuleContext<IntValueContext>(0);
		}
		public FloatValueContext floatValue() {
			return GetRuleContext<FloatValueContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_value);
		try {
			State = 79;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 76; stringValue();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 77; intValue();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 78; floatValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringValueContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(SqlVariableDeclarationsParser.STRING, 0); }
		public StringValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stringValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringValueContext stringValue() {
		StringValueContext _localctx = new StringValueContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_stringValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(SqlVariableDeclarationsParser.INT, 0); }
		public IntValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntValueContext intValue() {
		IntValueContext _localctx = new IntValueContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_intValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FloatValueContext : ParserRuleContext {
		public ITerminalNode FLOAT() { return GetToken(SqlVariableDeclarationsParser.FLOAT, 0); }
		public FloatValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_floatValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloatValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FloatValueContext floatValue() {
		FloatValueContext _localctx = new FloatValueContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_floatValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		public ITerminalNode VARIABLESIGN() { return GetToken(SqlVariableDeclarationsParser.VARIABLESIGN, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_variable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(VARIABLESIGN);
			State = 88; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public SpacesContext spaces() {
			return GetRuleContext<SpacesContext>(0);
		}
		public SizeContext size() {
			return GetRuleContext<SizeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; typeName();
			State = 94;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 91; spaces();
				State = 92; size();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public SpacesContext[] spaces() {
			return GetRuleContexts<SpacesContext>();
		}
		public SpacesContext spaces(int i) {
			return GetRuleContext<SpacesContext>(i);
		}
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(_ctx, State);
		EnterRule(_localctx, 26, RULE_typeName);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; identifier();
			State = 102;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 97; spaces();
					State = 98; identifier();
					}
					} 
				}
				State = 104;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SizeContext : ParserRuleContext {
		public ITerminalNode OPEN_PRTH() { return GetToken(SqlVariableDeclarationsParser.OPEN_PRTH, 0); }
		public SpacesContext[] spaces() {
			return GetRuleContexts<SpacesContext>();
		}
		public SpacesContext spaces(int i) {
			return GetRuleContext<SpacesContext>(i);
		}
		public LengthContext length() {
			return GetRuleContext<LengthContext>(0);
		}
		public ITerminalNode CLOSE_PRTH() { return GetToken(SqlVariableDeclarationsParser.CLOSE_PRTH, 0); }
		public SizeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_size; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSize(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SizeContext size() {
		SizeContext _localctx = new SizeContext(_ctx, State);
		EnterRule(_localctx, 28, RULE_size);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(OPEN_PRTH);
			State = 106; spaces();
			State = 107; length();
			State = 108; spaces();
			State = 109; Match(CLOSE_PRTH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LengthContext : ParserRuleContext {
		public IntValueContext intValue() {
			return GetRuleContext<IntValueContext>(0);
		}
		public MaxValueContext maxValue() {
			return GetRuleContext<MaxValueContext>(0);
		}
		public LengthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_length; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLength(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LengthContext length() {
		LengthContext _localctx = new LengthContext(_ctx, State);
		EnterRule(_localctx, 30, RULE_length);
		try {
			State = 113;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111; intValue();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 112; maxValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MaxValueContext : ParserRuleContext {
		public ITerminalNode MAX() { return GetToken(SqlVariableDeclarationsParser.MAX, 0); }
		public MaxValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_maxValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaxValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MaxValueContext maxValue() {
		MaxValueContext _localctx = new MaxValueContext(_ctx, State);
		EnterRule(_localctx, 32, RULE_maxValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(MAX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(SqlVariableDeclarationsParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqlVariableDeclarationsVisitor<TResult> typedVisitor = visitor as ISqlVariableDeclarationsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(_ctx, State);
		EnterRule(_localctx, 34, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace SqlFirst.Providers.MsSqlServer.VariableDeclarations.Generated
